@startuml
!define table(x) class x << (T,#FFAAAA) >>
hide methods
hide stereotypes

table(Users) {
    PK user_ID
    FK wallet_ID
    String name
    String email
    String password
    String userType
}

table(Products) {
    PK product_ID
    String name
    blob image
    float price
    int stock
    String productCategory
}

table(Favorites) {
    FK user_ID
    FK product_ID
}

table(Wallets) {
    PK wallet_ID
    int fonds
}

table(CreditCards) {
    PK creditCard_ID
    FK wallet_ID
    String experationdate
    String cardnumber
    String cvv
    String nameOfCardHolder
    String nameOfCard
}

table(Coupons) {
    PK coupon_ID
    FK wallet_ID
}

table(ProductCategorys) {
    String category
    blob image
}

table(SavedShoppingCarts) {
    PK savedShoppingCarts_ID
    FK user_ID
}

table(SavedShoppingCartsProducts){
    FK savedShoppingCarts_ID
    FK product_ID
    int amount
}

table(Purchases) {
    PK purchase_ID
    FK user_ID
    String date
}

table(PurchasedProducts) {
    FK purchasedShoppingCarts_ID
    FK product_ID
    int amount
}

'medarbejdere
table(Workers) {
    FK user_ID
    String phoneNumber
}

table(Shifts) {
    PK shift_ID
    FK user_ID
    String date
    float period
    String description
}

Wallets ||--|| Users
Wallets }o--|| CreditCards
Wallets }o--|| Coupons

Favorites ||--o{ Users
Favorites ||--o{ Products

SavedShoppingCarts ||--|{ SavedShoppingCartsProducts
Purchases ||--{ PurchasedProducts

Workers ||--|| Users
Users ||--o{ Shifts

@enduml